--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg2://todo_user:todo_password@localhost:5432/todo_db
+sqlalchemy.url = %(ALEMBIC_DATABASE_URL)s
 
 
 [post_write_hooks]
