--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
     environment:
       DATABASE_URL: postgresql+asyncpg://todo_user:todo_password@db:5432/todo_db
       ALEMBIC_DATABASE_URL: postgresql+psycopg2://todo_user:todo_password@db:5432/todo_db
+      SECRET_KEY: 8c47dc98274957f7954bb7ccd97b5fee
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
 
 volumes:
   pgdata:
